fixes photo spacing

--- a/style.css
+++ b/style.css
@@ -371,8 +371,8 @@
 	    display: flex;
 	    justify-content: center;
 	    align-items: center;
-	    height: 60vh; /* Reduce the height to 80% of the viewport height */
-	    width: 60%; /* Reduce the width to 80% of the parent/container width */
+	    height: auto; /* Reduce the height to 80% of the viewport height */
+	    width: 100%; /* Reduce the width to 80% of the parent/container width */
 	    margin-bottom: 20px;
 	    margin: auto; /* Center the container within its parent */
 	}
